tf/rta.tf
resource "aws_route_table_association" "rtb-0afa29b53d4306560-rtbassoc-00d6c4f9c4ef4de71" {
    route_table_id = "rtb-0afa29b53d4306560"
    subnet_id = "subnet-06d1f0485318c7520"
}
