tf/sn.tf
resource "aws_subnet" "subnet-06d1f0485318c7520-subnet-06d1f0485318c7520" {
    vpc_id                  = "vpc-011ff17464149dcd7"
    cidr_block              = "172.31.0.0/20"
    availability_zone       = "us-east-1a"
    map_public_ip_on_launch = true

    tags {
    }
}
